--- a/formulario.html
+++ b/formulario.html
@@ -17,13 +17,13 @@
             <h1 class="text-center">Formulário</h1>
         </div>
     </div>
-    <div class="row justify-content-center">
+    <div class="row justify-content-center mb-3">
         <div class="col-6">
-            <form action="produto.php" method="post">
+            <form>
                 <div class="form-row mb-3">
                     <div class="col-6">
                         <label>item</label>
-                        <input type="text" name="item" class="form-control">
+                        <input type="text" id="item" name="item" class="form-control">
                     </div>
                     <div class="col-3">
                         <label>valor</label>
@@ -34,16 +34,67 @@
                         <input type="text" name="quantidade" class="form-control">
                     </div>
                 </div>
-                <button class="btn btn-primary" type="submit">Enviar</button>
             </form>
+            <button id="bt-adicionar" class="btn btn-primary" type="submit">Adicionar</button>
+        </div>
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-6">
+            <table class="table">
+                <thead>
+                <tr>
+                    <th scope="col">item</th>
+                    <th scope="col">valor</th>
+                    <th scope="col">quantidade</th>
+                </tr>
+                </thead>
+                <tbody>
+
+                </tbody>
+            </table>
+            <button id="bt-enviar" class="btn btn-primary" type="submit">Enviar</button>
         </div>
     </div>
 </div>
-
+<form id="form-enviar" class="d-none" action="produto.php" method="post">
+    <input id="input-json" name="json" type="text">
+</form>
 <!-- JavaScript (Opcional) -->
 <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script>
+    $(document).ready(function () {
+        $("#bt-adicionar").click(function () {
+            $("tbody").append(
+                `<tr>
+                    <td class="item">${$("#item").val()}</td>
+                    <td class="valor">${$("[name='valor']").val()}</td>
+                    <td class="quantidade">${$("[name='quantidade']").val()}</td>
+                 </tr>
+                `
+            );
+        });
+
+        $("#bt-enviar").click(function () {
+            let list = [];
+            $("tbody>tr").each(function () {
+                list.push({
+                    "item":$(this).find(".item").text(),
+                    "valor":$(this).find(".valor").text(),
+                    "quantidade":$(this).find(".quantidade").text()
+                });
+            });
+            console.log(list);
+
+
+
+
+            $("#input-json").val(JSON.stringify(list));
+            $("#form-enviar").submit();
+        });
+    });
+</script>
 </body>
 </html>
